syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.ecommerce";
package ecommerce;
// Product Service
service ProductService {
  rpc GetProduct (ProductIdRequest) returns (ProductResponse) {}
  rpc AddProduct (ProductRequest) returns (ProductResponse) {}
}
// User-defined message types
message ProductIdRequest {
  int32 id = 1;
}
message ProductRequest {
  int32 id = 1;
  string name = 2;
  double price = 3;
  string description = 4;
}
message ProductResponse {
  int32 id = 1;
  string name = 2;
  double price = 3;
  string description = 4;
}